Centered file preview in import window and fixed layout issue

--- a/src/main/resources/com/example/tagger/stylesheets.css
+++ b/src/main/resources/com/example/tagger/stylesheets.css
@@ -9,5 +9,5 @@
 
 .dev-outline {
     -fx-border-color: #FF0000;
-    -fx-border-width: 1;
+    -fx-border-width: 0.5;
 }
